# terraformgraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  icons.py  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/plans/: 2026-01-30-open-source-terraform-diagram.md  2026-02-02-vpc-decomposition-and-resource-naming-design.md  2026-02-02-vpc-decomposition-implementation.md
example/: example-project-diagram.html  main.tf  variables.tf
example/vpc-demo/: main.tf  plan.json
terraform_diagram/: __init__.py  aggregator.py  layout.py  parser.py  renderer.py
terraformgraph/: __main__.py  aggregator.py  config_loader.py  icons.py  layout.py  main.py  parser.py  renderer.py  terraform_tools.py  variable_resolver.py
terraformgraph/config/: aggregation_rules.yaml
tests/: __init__.py  conftest.py  test_config_loader.py  test_integration.py  test_layout.py  test_parser.py  test_terraform_tools.py  test_variable_resolver.py  test_vpc_structure.py
tfgraph/: __init__.py  main.py
